created static html elements

--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
     </section>
     <!-- Section hello-world end -->
 
+    <!-- section news start -->
+    <section>
+        <div>
 
-    
+        </div>
 
+        <div>
+
+        </div>
+    </section>
+    <!-- section news end -->
     <script src="main.js"></script>
 </body>
 </html>
