--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Project 3</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="adaptive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,12 +30,15 @@
 
     <!-- section news start -->
     <section>
-        <div>
-
+        <div class="articles">
+            <p class="author">`$author`</p>
+            <h2 class=""></h2>
+            <p class=""></p>
+            <p class=""></p>
         </div>
 
-        <div>
-
+        <div class="images">
+            <img src="images/0.png" alt="image0">
         </div>
     </section>
     <!-- section news end -->
