--- a/index.html
+++ b/index.html
@@ -31,10 +31,21 @@
     <!-- section news start -->
     <section>
         <div class="articles">
-            <p class="author">`$author`</p>
-            <h2 class=""></h2>
-            <p class=""></p>
-            <p class=""></p>
+            <div class="header">
+                <p class="author"></p>
+                <p class="in">in</p>
+                <p class="topic_name"></p>
+                <p class="published_date"></p>
+            </div>
+            <div class="body">
+                <h2 class="title"></h2>
+                <p class="short_desc"></p>
+            </div>
+            <div class="footer">
+                <button class="theme"></button>                
+                <p class="time_over"></p>
+                <p class="select"></p>
+            </div>
         </div>
 
         <div class="images">
