first half of the project

--- a/index.html
+++ b/index.html
@@ -29,28 +29,7 @@
     <!-- Section hello-world end -->
 
     <!-- section news start -->
-    <section>
-        <div class="articles">
-            <div class="header">
-                <p class="author"></p>
-                <p class="in">in</p>
-                <p class="topic_name"></p>
-                <p class="published_date"></p>
-            </div>
-            <div class="body">
-                <h2 class="title"></h2>
-                <p class="short_desc"></p>
-            </div>
-            <div class="footer">
-                <button class="theme"></button>                
-                <p class="time_over"></p>
-                <p class="select"></p>
-            </div>
-        </div>
-
-        <div class="images">
-            <img src="images/0.png" alt="image0">
-        </div>
+    <section id="news">
     </section>
     <!-- section news end -->
     <script src="main.js"></script>
